fix: fix z-index issue

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -10,4 +10,5 @@
   padding-right: var(--header-padding-x);
   display: flex;
   align-items: center;
+  z-index: var(--z-fixed);
 }
